--- a/views/feminina.ejs
+++ b/views/feminina.ejs
@@ -14,39 +14,40 @@
 </head>
 <body>
     <%- include('./partials/header')  %>
+
     <div class="products">
         <h1>Our Products</h1>
         <div class="all-products">
             <div class="product">
-                <img src="./images/tenis.png" alt="tenis">
+                <img src="./images/calça.png" alt="tenis">
                 <div class="info-product">
-                    <h4 class="product-tittle">Gianiss II</h4>
+                    <h4 class="product-tittle">Calça</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
             </div>
 
             <div class="product">
-                <img src="./images/nike2.png" alt="calça">
+                <img src="./images/conjunto.png" alt="calça">
                 <div class="info-product">
-                    <h4 class="product-tittle">Phantom gx</h4>
+                    <h4 class="product-tittle">Conjunto</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
             </div>
 
             <div class="product">
-                <img src="./images/tatum2.png" alt="blusa">
+                <img src="./images/invicible.png" alt="blusa">
                 <div class="info-product">
-                    <h4 class="product-tittle">Tatum 1</h4>
+                    <h4 class="product-tittle">Invicible</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
             </div>
             <div class="product">
-                <img src="./images/tatum2.png" alt="blusa">
+                <img src="./images/vestido.png" alt="blusa">
                 <div class="info-product">
-                    <h4 class="product-tittle">Tatum 1</h4>
+                    <h4 class="product-tittle">Vestido</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
@@ -57,35 +58,35 @@
     <div class="products">
         <div class="all-products">
             <div class="product">
-                <img src="./images/tenis.png" alt="tenis">
+                <img src="./images/calça.png" alt="tenis">
                 <div class="info-product">
-                    <h4 class="product-tittle">Giannis II</h4>
+                    <h4 class="product-tittle">Calça</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
             </div>
 
             <div class="product">
-                <img src="./images/nike2.png" alt="calça">
+                <img src="./images/conjunto.png" alt="calça">
                 <div class="info-product">
-                    <h4 class="product-tittle">Phantom gx</h4>
+                    <h4 class="product-tittle">Conjunto</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
             </div>
 
             <div class="product">
-                <img src="./images/kd.png" alt="blusa">
+                <img src="./images/invicible.png" alt="blusa">
                 <div class="info-product">
-                    <h4 class="product-tittle">KD</h4>
+                    <h4 class="product-tittle">Invicible</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
             </div>
             <div class="product">
-                <img src="./images/kd.png" alt="blusa">
+                <img src="./images/vestido.png" alt="blusa">
                 <div class="info-product">
-                    <h4 class="product-tittle">KD</h4>
+                    <h4 class="product-tittle">Vestido</h4>
                     <p class="product-price">$50</p>
                     <a href="./produto" class="product-btn">Buy now</a>
                 </div>
