--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,9 +17,9 @@
 <nav class="bar">
     <ul class="menu">
         <li><a href="">Lançamentos</a></li>
-        <li><a href="">Feminino</a></li> 
-        <li><a href="">Masculino</a></li>
-        <li><a href="">Calçados</a></li>
-        <li><a href="">Acessórios</a></li>
+        <li><a href="./feminina">Feminino</a></li> 
+        <li><a href="./masculino">Masculino</a></li>
+        <li><a href="./calcados">Calçados</a></li>
+        <li><a href="./acessorios">Acessórios</a></li>
     </ul>
 </nav>
